@@ -1,3 +1,9 @@
+Sat Nov 29 11:02:50 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubgmodule.c: new python command "nextturn" to
+	emulate C routine "NextTurn".
+	* gnubgmodule.c (PyGameStats): add a few stats.
+
 Sat Nov 29 10:14:33 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkgame.c (ReportBug): use uname to improve logic.
